chore: solve static code sonarqube issues